Added type and context

--- a/app/resources/quotes/views/index.jl.html
+++ b/app/resources/quotes/views/index.jl.html
@@ -19,13 +19,13 @@
 
         <div id="from-div">
             <label for="from">Van<b>*</b>:</label>
-            <input type="text" name="from" id="from" maxlength="32" required>
+            <input type="text" name="from" id="from" maxlength="32">
         </div>
 
-        <!-- <label for="to">Context:</label>
-        <input type="text" name="to" maxlength="256">
+        <label for="to">Context:</label>
+        <input type="text" name="context" maxlength="256">
 
-        <br> -->
+        <br>
 
         <label for="date">Datum<b>*</b>:</label>
         <input type="date" id="date" name="date" required>
