--- a/app/resources/authentication/views/success.jl.html
+++ b/app/resources/authentication/views/success.jl.html
@@ -1,11 +1,8 @@
-<h1 class="display-3">Success!</h1>
+<h1>Succesvol ingelogd!</h1>
 
 <span>$(output_flash())</span>
 
-<div class="bs-callout bs-callout-primary">
-  <p>
-    Je bent ingelogd!
-
-    <a href="/" class="btn btn-link">Ga naar de homepage</a>
-  </p>
-</div>
+<p>
+  Je bent ingelogd!
+  <a href="/">Ga naar de homepage</a>
+</p>
