We willen alle validatie

--- a/app/resources/quotes/views/index.jl.html
+++ b/app/resources/quotes/views/index.jl.html
@@ -28,7 +28,7 @@
 
     <br>
 
-    <label for="date">Datum<b>*</b>:</label>
+    <label for="date">Datum van quote<b>*</b>:</label>
     <input type="date" id="date" name="date" required>
 
     <br><br>
