Fixed JS date stuff

--- a/app/resources/quotes/views/index.jl.html
+++ b/app/resources/quotes/views/index.jl.html
@@ -37,8 +37,9 @@
 </form>
 
 <script>
-    date.value = new Date().toLocaleDateString('nl');
-    date.max = date.value;
+    const today = new Date().toISOString().split("T")[0];
+    date.setAttribute("value", today)
+    date.setAttribute("max", today);
 </script>
 
 <script src="/js/toggleform.js"></script>
