--- a/app/layouts/app.jl.html
+++ b/app/layouts/app.jl.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="color-scheme" content="light dark">
-  <title>Quotes :)</title>
+  <title>Citaat-straat :D</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
