--- a/app/resources/authentication/views/login.jl.html
+++ b/app/resources/authentication/views/login.jl.html
@@ -1,21 +1,10 @@
-<h1>Login</h1>
-
-<p>
-  Voer het wachtwoord in om verder te gaan.
-</p>
+<h1><em>Welkom bij citaat-straat!</em></h1>
 
 <span>$(output_flash())</span>
 
+<p>Voer het wachtwoord in om verder te gaan.</p>
+
 <form method="POST" action="$(linkto(:login))" class="" enctype="multipart/form-data">
-  <!-- <div class="form-group">
-    <label _for="auth_username">Username</label>
-    <input type="text" id="auth_username" name="username" placeholder="User" />
-  </div> -->
-
-  <div class="form-group">
-    <label _for="auth_password">Wachtwoord:</label>
-    <input type="password" id="auth_password" name="password" placeholder="Wachtwoord" />
-  </div>
-
+  <input type="password" id="auth_password" name="password" placeholder="Wachtwoord" />
   <input type="submit" value="Login" />
 </form>
