Added stuff + server config files

--- a/app/resources/quotes/views/index.jl.html
+++ b/app/resources/quotes/views/index.jl.html
@@ -10,6 +10,10 @@
                         , $(quot.context)
                     <% end %>
                     ($(quot.date))</em></p>
+                <div class="quote-actions">
+                    <button class="edit-button">Edit</button>
+                    <button class="delete-button">Delete</button>
+                </div>
             </div>
         <% end %>
     <% else %>
