--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,9 +53,14 @@ b {
 
 .quote {
     background-color: #ebe9e8;
-    padding: 0.2em 1em 0.3em;
+    padding: 1em;
+    /* padding: 0.2em 1em 0.3em;
     margin: 0.7em;
-    box-shadow: 3px 3px #a7a5a4;
+    box-shadow: 3px 3px #a7a5a4; */
+}
+
+.quote:nth-child(2n) {
+    background-color: transparent;
 }
 
 .quote p {
